@@ -1,3 +1,7 @@
+Wed Oct 13 20:25:57 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>
+
+	* c-sort.rb: BUG#267対応. c-sortで余分にflattenしていた.
+
 Wed Oct 13 18:03:50 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>
 
 	* bin/fairy,fairy.conf.tmpl, master.rb, node.rb c-filter.rb,
